tests/expectations/compiler/tuple/return_statement_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `u64` but type `bool` was found
    --> compiler-test:7:24
     |
   7 |         return (t.0, t.1); // The second element should be type u64 as in the function declaration.
     |                        ^
"""]
